Return signed in if user phone number exists and sign up is hit.
