# app/Models/User.php
@@ -30,6 +30,7 @@ class User extends Authenticatable
         'firebase_uid',
         'phone_number',
         'phone_verified_at',
+        'last_logged_in_at',
     ];
 
     /**
@@ -52,6 +53,7 @@ class User extends Authenticatable
         return [
             'email_verified_at' => 'datetime',
             'phone_verified_at' => 'datetime',
+            'last_logged_in_at' => 'datetime',
             'password' => 'hashed',
             'is_guest' => 'boolean',
             'is_premium' => 'boolean',
